# go

./: LICENSE  go.cabal
cbits/: go_board.c
csrc/: go_board.c  go_board.h
src/: Go.hs
src/Go/: Board.hs  Board.hsc  MonteCarlo.hs  Stone.hs
src/Go/Board/: FFI.hsc
