name:                go
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/jxv/go
license:             BSD3
license-file:        LICENSE
author:              Joe Vargas
maintainer:          Joe Vargas
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     cbits/*\.h,
                     cbits/*\.c

library
  include-dirs:        cbits
  includes:            cbits/go_board.h
  c-sources:           cbits/go_board.c

  exposed-modules:     Go,
                       Go.Stone,
                       Go.Board,
                       Go.MonteCarlo

  other-modules:       Go.Board.FFI

  other-extensions:    CPP,
                       ForeignFunctionInterface,
                       GeneralizedNewtypeDeriving

  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       binary >= 0.7 && <0.8,
                       random >= 1.0 && <1.1

  hs-source-dirs:      src
  build-tools:         hsc2hs
  cc-options:          -fPIC
  default-language:    Haskell2010
